fix: hide scrollbar for IE, Edge and Firefox

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -49,6 +49,8 @@ body {
 .main_wrapper {
   height: 100%;
   overflow: auto;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
 
 .main_wrapper::-webkit-scrollbar {
